# flair-bloom

./: .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.githooks/: commit-msg  pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
apps/keygen/: Cargo.toml
apps/keygen/src/: main.rs
apps/main/: package.json  panel-float.html  panel.html  vite.config.ts
apps/main/src/: constants.ts
apps/main/src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json  tauri.windows.conf.json
apps/main/src-tauri/capabilities/: default.json
apps/main/src-tauri/icons/: icon.icns
apps/main/src-tauri/resources/: disable-ddhid-driver.cmd
apps/main/src-tauri/resources/ddhid-driver/: ddhid63340.cat  ddhid63340.inf  ddhid63340.sys
apps/main/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/main/src-tauri/src/bootstrap/: agreement.rs  input.rs  logging.rs  mod.rs  profile.rs  update.rs
apps/main/src-tauri/src/commands/: app.rs  ddhid_diagnostic.rs  driver.rs  engine.rs  engine_judge_tests.rs  engine_tests.rs  import_profile.rs  log.rs  mod.rs  profile.rs  profile_tests.rs  repair.rs  resource_integrity.rs  status.rs  sysinfo.rs
apps/main/src-tauri/src/engine/: burst.rs  dd_common.rs  ddhid.rs  input.rs  interception.rs  mod.rs
apps/main/src/assets/: EULA.md
apps/main/src/windows/float/: FloatApp.css  FloatApp.tsx  main.tsx
apps/main/src/windows/panel/: ConfirmDialog.tsx  HorizontalLayout.css  HorizontalLayout.tsx  Overlay.tsx  PanelApp.css  PanelApp.tsx  Toast.tsx  conflicts.ts  keyboardLayout.ts  main.tsx  theme.css  theme.ts  useKeyRelay.ts
apps/main/src/windows/panel/components/: Button.css  Button.tsx  CardList.css  CardList.tsx  CloseBehaviorForm.css  CloseBehaviorForm.tsx  ConfirmDialog.tsx  ContextMenu.css  ContextMenu.tsx  IntervalInput.css  IntervalInput.tsx  Kbd.css  Kbd.tsx  KeyCapture.css  KeyCapture.tsx  Overlay.css  Overlay.tsx  ProfileNameForm.css  ProfileNameForm.tsx  SvgIcon.tsx  Tabs.css  Tabs.tsx  Toast.css  Toast.tsx  UpdateProgressBar.css  UpdateProgressBar.tsx  icons.tsx
apps/main/src/windows/panel/dialogs/: AboutDialog.css  AboutDialog.tsx  AgreementDialog.css  AgreementDialog.tsx  DialogShell.css  DialogShell.tsx  ImportDialog.css  ImportDialog.tsx  ProfileCardList.css  ProfileCardList.tsx  RepairDialog.css  RepairDialog.tsx  SettingsDialog.css  SettingsDialog.tsx  UpdateNoticeDialog.css  UpdateNoticeDialog.tsx  dialog-base.css
apps/main/src/windows/panel/pages/AgreementPage/: AgreementPage.tsx
docs/: ASSETS.md  BURST_ENGINE_OPTIMIZATION.md  COMPETITOR_JX3ANJIAN_ANALYSIS.md  RELEASE_ROLLBACK.md  ROADMAP.md  SCHEDULER_STRESS.md  TESTING.md  WINDOWS_VERIFY.md  v0.2.0-keyid.md
scripts/: bump-version.ts  burst-engine-stress.ps1  check-ddhid-resources.ts  diagnose-ddhid-oneclick.cmd  diagnose-ddhid.ps1  disable-ddhid-driver.cmd  extract-changelog.ts
