[workspace]
members = [
    "packages/crypto",
    "packages/migrate",
    "packages/qzh-format",
    "packages/qzh-profile",
    "packages/resource-integrity",
    "packages/win-sysinfo",
    "packages/win-input",
    "packages/burst-engine",
    "packages/win-driver",
    "apps/keygen",
    "apps/main/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["向文可"]
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# 工作区统一 clippy 规约。各 crate 通过 `[lints] workspace = true` 继承。
[workspace.lints.clippy]
uninlined_format_args = "warn"
