[package]
name = "flair-bloom"
version.workspace = true
edition.workspace = true

[lib]
name = "flair_bloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
crypto = { path = "../../../packages/crypto" }
qzh-format = { path = "../../../packages/qzh-format" }
qzh-profile = { path = "../../../packages/qzh-profile" }
resource-integrity = { path = "../../../packages/resource-integrity" }
win-sysinfo = { path = "../../../packages/win-sysinfo" }
win-input = { path = "../../../packages/win-input" }
burst-engine = { path = "../../../packages/burst-engine" }
win-driver = { path = "../../../packages/win-driver" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
